--- a/ChronicleLog.App/Resources/Dictionaries/ButtonResourceDictionary.xaml
+++ b/ChronicleLog.App/Resources/Dictionaries/ButtonResourceDictionary.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="RoundButton" TargetType="{x:Type Button}">
+        <!-- TODO : Animate the TransformGroup -->
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
