Add a  style for textboxes in AddLogView

--- a/ChronicleLog.App/App.xaml
+++ b/ChronicleLog.App/App.xaml
@@ -9,6 +9,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Themes/DarkThemeResourceDictionary.xaml" />
                 <ResourceDictionary Source="/Resources/Dictionaries/ButtonResourceDictionary.xaml" />
+                <ResourceDictionary Source="/Resources/Dictionaries/TextBoxResourceDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
