--- a/ChronicleLog.App/Resources/Dictionaries/ButtonResourceDictionary.xaml
+++ b/ChronicleLog.App/Resources/Dictionaries/ButtonResourceDictionary.xaml
@@ -6,6 +6,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Border
+                        Name="ButtonContainer"
                         Margin="{TemplateBinding Margin}"
                         Height="{TemplateBinding Height}"
                         Width="{TemplateBinding Width}"
@@ -24,7 +25,7 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Opacity" Value="0.85" />
+                <Setter Property="Opacity" Value="0.9" />
                 <Setter Property="Cursor" Value="Hand" />
                 <Setter Property="RenderTransform">
                     <Setter.Value>
@@ -36,7 +37,7 @@
                 </Setter>
             </Trigger>
             <Trigger Property="IsFocused" Value="True">
-                <Setter Property="Opacity" Value="0.85" />
+                <Setter Property="Opacity" Value="0.9" />
                 <Setter Property="RenderTransform">
                     <Setter.Value>
                         <TransformGroup>
