--- a/ChronicleLog.App/MVVM/Views/AddLogView.xaml
+++ b/ChronicleLog.App/MVVM/Views/AddLogView.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     d:DesignHeight="600"
     d:DesignWidth="690">
-    <Grid Margin="10 20" MaxWidth="800" Focusable="False">
+    <Grid Margin="10 20" MaxWidth="800" Focusable="False" KeyboardNavigation.TabNavigation="Cycle">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="*" />
@@ -49,7 +49,7 @@
             Style="{StaticResource TransparentTextBox}"
             Text="{Binding QueryParagraph}" />
         
-        <StackPanel Grid.Row="1" Grid.Column="2">
+        <StackPanel Grid.Row="1" Grid.Column="2" Focusable="False">
             <Button 
                 Width="30"
                 Height="30"
