--- a/ChronicleLog.App/Resources/Dictionaries/ButtonResourceDictionary.xaml
+++ b/ChronicleLog.App/Resources/Dictionaries/ButtonResourceDictionary.xaml
@@ -1,7 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="RoundButton" TargetType="{x:Type Button}">
-        <!-- TODO : Animate the TransformGroup -->
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+        <Setter Property="BorderThickness" Value="2" />
+        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
@@ -11,7 +13,7 @@
                         Height="{TemplateBinding Height}"
                         Width="{TemplateBinding Width}"
                         CornerRadius="100"
-                        BorderThickness="2"
+                        BorderThickness="{TemplateBinding BorderThickness}"
                         Background="{TemplateBinding Background}">
                         <ContentPresenter
                             TextBlock.Foreground="{TemplateBinding Foreground}"
@@ -25,7 +27,6 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Opacity" Value="0.9" />
                 <Setter Property="Cursor" Value="Hand" />
                 <Setter Property="RenderTransform">
                     <Setter.Value>
@@ -36,17 +37,32 @@
                     </Setter.Value>
                 </Setter>
             </Trigger>
-            <Trigger Property="IsFocused" Value="True">
-                <Setter Property="Opacity" Value="0.9" />
-                <Setter Property="RenderTransform">
-                    <Setter.Value>
-                        <TransformGroup>
-                            <ScaleTransform ScaleX="1.15" ScaleY="1.15" />
-                            <TranslateTransform X="-2" Y="-2" />
-                        </TransformGroup>
-                    </Setter.Value>
-                </Setter>
-            </Trigger>
+            <MultiTrigger>
+                <MultiTrigger.Conditions>
+                    <Condition Property="IsMouseOver" Value="False" />
+                    <Condition Property="IsFocused" Value="True" />
+                </MultiTrigger.Conditions>
+                <MultiTrigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <ThicknessAnimation
+                                Duration="0:0:0.05"
+                                To="0"
+                                Storyboard.TargetProperty="BorderThickness" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </MultiTrigger.EnterActions>
+                <MultiTrigger.ExitActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <ThicknessAnimation 
+                                Duration="0:0:0.05" 
+                                To="2" 
+                                Storyboard.TargetProperty="BorderThickness" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </MultiTrigger.ExitActions>
+            </MultiTrigger>
         </Style.Triggers>
     </Style>
 </ResourceDictionary>
