--- a/ChronicleLog.App/Resources/Dictionaries/TextBoxResourceDictionary.xaml
+++ b/ChronicleLog.App/Resources/Dictionaries/TextBoxResourceDictionary.xaml
@@ -8,6 +8,7 @@
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Padding" Value="5 2" />
         <Setter Property="KeyboardNavigation.TabNavigation" Value="Local" />
+        <Setter Property="SelectionBrush" Value="HotPink" />
 
         <Setter Property="Template">
             <Setter.Value>
