Add navigation store

--- a/ChronicleLog.App/MVVM/Views/ListingLogView.xaml
+++ b/ChronicleLog.App/MVVM/Views/ListingLogView.xaml
@@ -71,7 +71,7 @@
                             </ControlTemplate.Triggers>
                             <Border>
                                 <ContentPresenter 
-                                    HorizontalAlignment="Center" 
+                                    HorizontalAlignment="Stretch" 
                                     VerticalAlignment="Center"/>
                             </Border>
                         </ControlTemplate>
