--- a/ChronicleLog.App/MainWindow.xaml
+++ b/ChronicleLog.App/MainWindow.xaml
@@ -11,6 +11,7 @@
         MouseDown="Window_MouseDown"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
+        Title="Chronicle Log"
         Background="{StaticResource AppBackgroundColor}"
         AllowsTransparency="True"
         Height="600" Width="800">
@@ -45,6 +46,7 @@
             Grid.ColumnSpan="2" 
             Grid.RowSpan="3"
             Margin="0 25 0 0"
+             
             Content="{Binding CurrentView, UpdateSourceTrigger=PropertyChanged}" />
 
         <!--#region EssentialControls -->
@@ -91,7 +93,7 @@
 
                 <RadioButton 
                     GroupName="Navigation" 
-                    IsChecked="True" 
+                    IsChecked="True"
                     Command="{Binding NavigateToDetachLogViewCommand}">
                     <RadioButton.Content>
                         <Path 
