Create loadAnimation in ListingLogView code-behind

--- a/ChronicleLog.App/MVVM/Views/DetachLogView.xaml
+++ b/ChronicleLog.App/MVVM/Views/DetachLogView.xaml
@@ -7,6 +7,7 @@
     xmlns:local="clr-namespace:ChronicleLog.App.MVVM.Views"
     xmlns:viewmodel="clr-namespace:ChronicleLog.App.MVVM.ViewModels"
     mc:Ignorable="d"
+    VerticalAlignment="Center"
     d:DesignHeight="600"
     d:DesignWidth="690">
     
