--- a/ChronicleLog.App/MVVM/Views/AddLogView.xaml
+++ b/ChronicleLog.App/MVVM/Views/AddLogView.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:ChronicleLog.App.MVVM.Views"
     mc:Ignorable="d"
+    VerticalAlignment="Top"
     d:DesignHeight="600"
     d:DesignWidth="690">
     <Grid Margin="10 20" MaxWidth="800" Focusable="False" KeyboardNavigation.TabNavigation="Cycle">
