--- a/ChronicleLog.App/MVVM/Views/ListingLogView.xaml
+++ b/ChronicleLog.App/MVVM/Views/ListingLogView.xaml
@@ -12,80 +12,83 @@
              VerticalAlignment="Top"
              SizeChanged="ListingUserControl_SizeChanged"
              d:DesignHeight="600" d:DesignWidth="690">
+    <StackPanel>
+        <Button Command="{Binding DeleteQueryCommand}" />
+        <ListView 
+            x:Name="ListingListView"
+            Background="Transparent" 
+            Foreground="{StaticResource TextForegroundColor}" 
+            HorizontalContentAlignment="Stretch" 
+            UseLayoutRounding="True" 
+            BorderThickness="0"
+            VirtualizingPanel.IsVirtualizing="True"
+            VirtualizingPanel.ScrollUnit="Pixel"
+            SelectedItem="{Binding SelectedLog}"
+            ScrollViewer.VerticalScrollBarVisibility="Visible"
+            ItemsSource="{Binding LogQueryViewModels}">
 
-    <ListView 
-        x:Name="ListingListView"
-        Background="Transparent" 
-        Foreground="{StaticResource TextForegroundColor}" 
-        HorizontalContentAlignment="Stretch" 
-        UseLayoutRounding="True" 
-        BorderThickness="0"
-        VirtualizingPanel.IsVirtualizing="True"
-        VirtualizingPanel.ScrollUnit="Pixel"
-        ScrollViewer.VerticalScrollBarVisibility="Visible"
-        ItemsSource="{Binding LogQueryViewModels}">
+            <ListView.Resources>
+                <Style TargetType="{x:Type ScrollBar}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ScrollBar}">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="10" />
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="10" />
+                                    </Grid.RowDefinitions>
 
-        <ListView.Resources>
-            <Style TargetType="{x:Type ScrollBar}">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type ScrollBar}">
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="10" />
-                                    <RowDefinition Height="*" />
-                                    <RowDefinition Height="10" />
-                                </Grid.RowDefinitions>
+                                    <Track Name="PART_Track" Grid.Row="1" IsDirectionReversed="True">
+                                        <Track.Thumb>
+                                            <Thumb>
+                                                <Thumb.Template>
+                                                    <ControlTemplate TargetType="{x:Type Thumb}">
+                                                        <Border 
+                                                            Background="{StaticResource ScrollBarBackgroundColor}"
+                                                            Opacity="0.5"
+                                                            CornerRadius="4"
+                                                            Width="8"
+                                                            HorizontalAlignment="Center"
+                                                            Margin="2 0 0 0"/>
+                                                    </ControlTemplate>
+                                                </Thumb.Template>
+                                            </Thumb>
+                                        </Track.Thumb>
+                                    </Track>
+                                </Grid>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.Resources>
 
-                                <Track Name="PART_Track" Grid.Row="1" IsDirectionReversed="True">
-                                    <Track.Thumb>
-                                        <Thumb>
-                                            <Thumb.Template>
-                                                <ControlTemplate TargetType="{x:Type Thumb}">
-                                                    <Border 
-                                                        Background="{StaticResource ScrollBarBackgroundColor}"
-                                                        Opacity="0.5"
-                                                        CornerRadius="4"
-                                                        Width="8"
-                                                        HorizontalAlignment="Center"
-                                                        Margin="2 0 0 0"/>
-                                                </ControlTemplate>
-                                            </Thumb.Template>
-                                        </Thumb>
-                                    </Track.Thumb>
-                                </Track>
-                            </Grid>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-        </ListView.Resources>
-
-        <ListView.ItemContainerStyle>
-            <Style TargetType="ListViewItem">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type ListViewItem}">
-                            <ControlTemplate.Triggers>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="#FFF" />
-                                </Trigger>
-                            </ControlTemplate.Triggers>
-                            <Border>
-                                <ContentPresenter 
-                                    HorizontalAlignment="Stretch" 
-                                    VerticalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-        </ListView.ItemContainerStyle>
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#FFF" />
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                                <Border>
+                                    <ContentPresenter 
+                                        HorizontalAlignment="Stretch" 
+                                        VerticalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
         
-        <ListView.ItemTemplate>
-            <DataTemplate>
-                <components:LogQuery MaxWidth="{Binding ElementName=ListingListView, Path=MinWidth}"/>
-            </DataTemplate>
-        </ListView.ItemTemplate>
-    </ListView>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <components:LogQuery MaxWidth="{Binding ElementName=ListingListView, Path=MinWidth}"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </StackPanel>
 </UserControl>
