--- a/ChronicleLog.App/MVVM/Views/ListingLogView.xaml
+++ b/ChronicleLog.App/MVVM/Views/ListingLogView.xaml
@@ -10,12 +10,32 @@
              Loaded="ListingUserControl_Loaded"
              x:Name="ListingUserControl"
              VerticalAlignment="Top"
+             KeyboardNavigation.DirectionalNavigation="Cycle"
              SizeChanged="ListingUserControl_SizeChanged"
              d:DesignHeight="600" d:DesignWidth="690">
-    <StackPanel>
-        <Button Command="{Binding DeleteQueryCommand}" />
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Button 
+            HorizontalAlignment="Right" 
+            Height="30" 
+            Width="30"
+            Margin="5 10 10 10"
+            Background="#ff99aa"
+            Style="{StaticResource RoundButton}"
+            Command="{Binding DeleteQueryCommand}">
+            <Button.Content>
+                <Path Data="M6 0l3 14l8 0l3 -14m-10 4l6 6m0 -6l-6 6" Stroke="White"/>
+            </Button.Content>
+            <Button.LayoutTransform>
+                <ScaleTransform ScaleX="1.25" ScaleY="1.25" />
+            </Button.LayoutTransform>
+        </Button>
         <ListView 
             x:Name="ListingListView"
+            Grid.Column="1"
             Background="Transparent" 
             Foreground="{StaticResource TextForegroundColor}" 
             HorizontalContentAlignment="Stretch" 
@@ -90,5 +110,5 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-    </StackPanel>
+    </Grid>
 </UserControl>
