--- a/ChronicleLog.App/MVVM/Views/ListingLogView.xaml
+++ b/ChronicleLog.App/MVVM/Views/ListingLogView.xaml
@@ -18,21 +18,43 @@
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <Button 
-            HorizontalAlignment="Right" 
-            Height="30" 
-            Width="30"
-            Margin="5 10 10 10"
-            Background="#ff99aa"
-            Style="{StaticResource RoundButton}"
-            Command="{Binding DeleteQueryCommand}">
-            <Button.Content>
-                <Path Data="M6 0l3 14l8 0l3 -14m-10 4l6 6m0 -6l-6 6" Stroke="White"/>
-            </Button.Content>
-            <Button.LayoutTransform>
-                <ScaleTransform ScaleX="1.25" ScaleY="1.25" />
-            </Button.LayoutTransform>
-        </Button>
+        <StackPanel>
+            <Button 
+                HorizontalAlignment="Right" 
+                Height="30" 
+                Width="30"
+                Margin="5 10 10 2"
+                Background="#ff99aa"
+                Style="{StaticResource RoundButton}"
+                Command="{Binding DeleteQueryCommand}">
+                <Button.Content>
+                    <Path Data="M6 0l3 14l8 0l3 -14m-10 4l6 6m0 -6l-6 6" Stroke="White"/>
+                </Button.Content>
+                <Button.LayoutTransform>
+                    <ScaleTransform ScaleX="1.25" ScaleY="1.25" />
+                </Button.LayoutTransform>
+            </Button>
+            <Button 
+                HorizontalAlignment="Right" 
+                Height="30"
+                Width="30"
+                Margin="5 2 10 2"
+                Background="#ff9900"
+                Style="{StaticResource RoundButton}"
+                Command="{Binding UpdateQueryCommand}">
+                <Button.Content>
+                    <Grid Height="20" Width="20">
+                        <Grid.LayoutTransform>
+                            <RotateTransform Angle="25" />
+                        </Grid.LayoutTransform>
+                        <Path Data="M7 0l0 15l3 5l3 -5l0 -15l-6 0m0 3l6 0m0 12l-6 0" Stroke="White" />
+                    </Grid> <!-- Create the icon for edit (pencil) -->
+                </Button.Content>
+                <Button.LayoutTransform>
+                    <ScaleTransform ScaleX="1.25" ScaleY="1.25" />
+                </Button.LayoutTransform>
+            </Button>
+        </StackPanel>
         <ListView 
             x:Name="ListingListView"
             Grid.Column="1"
